@@ -1,2 +1,3 @@
 not(<*_dyn*>): use_batteries,debug
 <*_dyn*>: pkg_findlib
+<cat*>: pkg_threads
